# vid2doc

./: .gitignore  README.md  _quarto.yml  pyproject.toml
docs/: README.html  about.html  index.html  search.json  styles.css
docs/talks/: output.html
src/vid2doc/: cli.py  doc_creator.py  frame_extractor.py  transcriber.py  youtube.py
talks/: output.qmd
